<resources>
    <string name="app_name">Sleep Timer App</string>
    <string name="action_settings">Settings</string>
    <string name="default_app">default_app</string>
    <string name="default_app_title">Default App</string>
    <string name="pref_app">pref_app</string>
    <string name="prev_duration">prev_duration</string>
    <string name="available_apps">Available Apps</string>
    <string name="no_available_apps">No available apps</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="key_bluetooth">key_bluetooth</string>
    <string name="key_max_time">key_max_time</string>
    <string name="key_wifi">key_wifi</string>
    <string name="alarm_active">alarmActive</string>
    <string name="start_alarm_time">start_alarm_time</string>
    <string name="time_remaining">time_remaining</string>
    <string name="time">time</string>
    <string name="timer">Timer</string>
    <string name="minutes_remaining">" minutes remaining"</string>
    <string name="volume">volume</string>
    <string name="dialog">dialog</string>
    <string name="min">MIN</string>
    <string name="all">All</string>
    <string name="music">Music</string>
    <string name="main_settings">Main settings</string>
    <string name="details">Details</string>
    <string name="wifi_desc">Turn Wifi off</string>
    <string name="bluetooth_desc">Turn Bluetooth off</string>
    <string name="hour_in_min">60</string>
    <string name="main">Main</string>
    <string name="settings_fragment_name">hu.ait.timerapp.Settings$FragmentSettingsBasic</string>
    <string name="no_headers">:android:no_headers</string>
    <string name="show_fragment">:android:show_fragment</string>
    <string name="title">Title</string>
</resources>
