<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout="@layout/preference_screen">
    <PreferenceCategory android:title="@string/main">

        <hu.ait.timerapp.AppPreference
            android:key="@string/pref_app"
            android:title="@string/default_app_title"></hu.ait.timerapp.AppPreference>
        <EditTextPreference
            android:key="@string/key_max_time"
            android:title="Max Duration"
            android:inputType="number"
            android:defaultValue="@string/hour_in_min"
            android:summary="@string/hour_in_min"
            />


        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_wifi"
            android:title="@string/wifi_desc"
            android:widgetLayout="@layout/custom_checkbox" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_bluetooth"
            android:title="@string/bluetooth_desc"
            android:widgetLayout="@layout/custom_checkbox" />

        <!--<item android:id="@+id/action_settings"-->
            <!--android:title="@string/action_settings"-->
            <!--android:icon="@drawable/ic_sun"-->
            <!--android:orderInCategory="100"-->
            <!--app:showAsAction="always" />-->

        <!--<SwitchPreference-->
            <!--android:key="key_volume"-->
            <!--android:summaryOff="off"-->
            <!--android:summaryOn="on"-->
            <!--android:title="Lower volume" />-->


    </PreferenceCategory>
</PreferenceScreen>